Add several projection matrices slides

--- a/common/math_preamble.tex
+++ b/common/math_preamble.tex
@@ -43,6 +43,7 @@
 \newcommand{\reprojectionError}{u}
 \newcommand{\projectionMatrix}{\vec{P}}
 \newcommand{\cameraCenter}{\vec{o}}
+\newcommand{\worldCameraCenter}{\toCoord{\cameraCenter}{\worldCoordSystem}}
 \newcommand{\essentialMatrix}{\vec{E}}
 \newcommand{\inverse}[1]{{#1}^{-1}}
 
