Add grayscale image values

--- a/teoricas/teorica_03/src/camera.tex
+++ b/teoricas/teorica_03/src/camera.tex
@@ -26,10 +26,14 @@
 \begin{frame}
     \frametitle{Imagen}
     
+    \begin{figure}[!h]
+        \includegraphics[width=0.4\columnwidth]{images/camera_grayscale_image_pixels.pdf}
+    \end{figure}   
+    
     \begin{columns}
     	\begin{column}{0.5\textwidth}
 		    \begin{figure}[!h]
-			\includegraphics[width=0.6\columnwidth]{images/image_pixels.pdf}
+			\includegraphics[width=0.4\columnwidth]{images/image_pixels.pdf}
 			\end{figure}
     	\end{column}
     	\begin{column}{0.3\textwidth}
