--- a/teoricas/teorica_02/src/locomotion.tex
+++ b/teoricas/teorica_02/src/locomotion.tex
@@ -1,17 +1,16 @@
 
 \begin{frame}
     \frametitle{Locomoción}
-    \small
+    \footnotesize
 
     \begin{block}{Locomoción}
         Traslación de un lugar a otro.
     \end{block}
 
     El humano copia a la naturaleza para construir tipos de locomoción.
-    \TODO{Mostrar ejemplos del libro Figura 2.1. animales y robots reales.}
 
     \begin{center}
-        \includegraphics[width=0.7\columnwidth]{images/biological_locomotion_systems.pdf}
+        \includegraphics[width=0.6\columnwidth]{images/biological_locomotion_systems.pdf}
     \end{center}
 
     La naturaleza tuvo que adaptar a los animales para terrenos irregulares!
