--- a/teoricas/teorica_02/src/pose.tex
+++ b/teoricas/teorica_02/src/pose.tex
@@ -17,8 +17,10 @@
 
 \begin{frame}
     \frametitle{Representación de pose en 2D}
-
-    \includegraphics[width=\columnwidth]{./images/multiple_coordinate_frames_2d.pdf}
+    
+    \begin{figure}[!h]
+        \includegraphics[width=0.6\columnwidth]{./images/multiple_coordinate_frames_2d.pdf}
+    \end{figure}
 
 \end{frame}
 
@@ -26,7 +28,9 @@
 \begin{frame}
     \frametitle{Representación de pose en 3D}
 
-    \includegraphics[width=\columnwidth]{./images/multiple_coordinate_frames_3d.pdf}
+    \begin{figure}[!h]
+        \includegraphics[width=0.6\columnwidth]{./images/multiple_coordinate_frames_3d.pdf}
+    \end{figure}
 
 \end{frame}
 
