Add specific beamer preamble

--- a/teoricas/teorica_05/slides.tex
+++ b/teoricas/teorica_05/slides.tex
@@ -6,8 +6,14 @@
 %\documentclass[compress,handout]{beamer}
 \documentclass[aspectratio=169,compress]{beamer}
 
-% add preamble
-\input{../../common/preamble}
+% add beamer preamble
+\input{../../common/beamer_preamble}
+
+% add latex preamble
+\input{../../common/latex_preamble}
+
+% add math preamble
+\input{../../common/math_preamble}
 
 \title{Visión por computadora}
 \author{}
