--- a/tps/tp1/tp1.tex
+++ b/tps/tp1/tp1.tex
@@ -18,13 +18,20 @@
 \maketitle
 
 \section{Entrega}
-Se deberá proveer un repositorio git y junto con las instrucciones de compilación en un archivo README.md.
-Además, se deberá entregar un informe realizado en Lyx o latex explicando los pasos realizados y analizando los resultados obtenidos.
+Se deberá entregar un informe realizado en Lyx o latex explicando los pasos realizados y analizando los resultados obtenidos.
 
 \section{Introducción}
+Esta práctica es para ponerse a punto con transformaciones.
 
-El objetivo del tp es que se realicen los pasos básicos para poder triangular y proyectar puntos con una cámara estéreo. 
-Para esto se trabajará con datos reales.
+\section{Rotaciones 3D}
+Para el sistema de coordenadas canónico de un robot móvil (x: hacia adelante, y: hacia la izquierda, z: hacia arriba) dibujar el sistema de coordenadas resultante luego de aplicar la rotación dada.
+
+\begin{problema}
+    
+    
+\end{problema}
+
+
 
 
 \end{document}
