--- a/common/beamer_preamble.tex
+++ b/common/beamer_preamble.tex
@@ -8,3 +8,6 @@
 
 \setbeamertemplate{blocks}[rounded] % blocks corners rounded
 \setbeamercolor{block body}{bg=blue!12,fg=black} % color of blocks
+\setbeamertemplate{caption}{\raggedright\insertcaption\par} % elimina la palabra "Figura" del caption
+
+\usepackage[overridenote]{pdfpc} % requires to download manually pdfpc.sty package from https://www.ctan.org/pkg/pdfpc
