--- a/teoricas/teorica_02/slides.tex
+++ b/teoricas/teorica_02/slides.tex
@@ -15,7 +15,7 @@
 % add math preamble
 \input{../../common/math_preamble}
 
-\title{Locomoción}
+\title{Cinemática}
 \author{}
 \institute{Universidad Nacional de Rosario}
 %\date{\scriptsize{Julio 1, 2021}}
