--- a/teoricas/teorica_02/src/pose.tex
+++ b/teoricas/teorica_02/src/pose.tex
@@ -305,8 +305,10 @@
 
 \begin{frame}
     \frametitle{Roll Pitch Yaw }
-    \includegraphics[width=0.5\columnwidth]{./images/roll_pitch_yaw.pdf}
-
+    
+    \begin{figure}[!h]
+        \includegraphics[width=0.5\columnwidth]{./images/roll_pitch_yaw.pdf}
+    \end{figure}
     \TODO{Gimbal-Lock Video explanation: https://youtu.be/-WXfEPg8eMM}
 \end{frame}
 
