--- a/tps/tp1/tp1.tex
+++ b/tps/tp1/tp1.tex
@@ -1,6 +1,10 @@
 \documentclass[tp]{lcc}
 
-\usepackage{hyperref}
+% add latex preamble
+\input{../../common/latex_preamble}
+
+% add math preamble
+\input{../../common/math_preamble}
 
 \codigo{}
 \materia{Fundamentos de Robótica Móvil}
@@ -24,11 +28,29 @@ Se deberá entregar un informe realizado en Lyx o latex explicando los pasos rea
 Esta práctica es para ponerse a punto con transformaciones.
 
 \section{Rotaciones 3D}
-Para el sistema de coordenadas canónico de un robot móvil (x: hacia adelante, y: hacia la izquierda, z: hacia arriba) dibujar el sistema de coordenadas resultante luego de aplicar la rotación dada.
 
-\begin{problema}
+\begin{problema} Para el sistema de coordenadas canónico de un robot móvil (x: hacia adelante, y: hacia la izquierda, z: hacia arriba) dibujar el sistema de coordenadas resultante luego de aplicar la rotación dada.
+ 
+    \begin{figure}[!h]
+    \centering
+    \subfloat[(0,0,0)]
+    {
+        \includegraphics[width=0.2\columnwidth]{./images/roll_pitch_yaw.pdf}
+    }
+    \hspace{3cm}
+    \subfloat[$R_{y}(90)$]
+    {
+        
+    }
+    \hspace{3cm}
+    \subfloat[$R_{x}(-90)R_{y}(90)$]
+    {
     
-    
+    }
+    \hspace{3cm}
+    \subfloat[$R_{z}(180)R_{x}(-90)R_{y}(90)$]{}
+    \end{figure}
+
 \end{problema}
 
 
