Add transformation excersises

--- a/common/beamer_preamble.tex
+++ b/common/beamer_preamble.tex
@@ -1,3 +1,5 @@
+% In this preamble should go only package and settings related with beamer
+
 % Theme customization
 \setbeamertemplate{itemize item}[rectangle] % configure itemize
 \setbeamertemplate{itemize subitem}[circle] % configure itemize
